Bring the docs level with the code
An audit rather than a rewrite: cross-checking every claim in the docs against
what the code and the suite actually do now turned up eight stale ones.

CONTRIBUTING.md was the worst of it. It still described ADR-001 as having five
rules and listed five, missing rule 6 (ambient context travels with the
handshake) entirely; and its rule 2 said processes are "driven by synchronous
handshakes (gen_server:call, not !)", which ebb-8nq.29 made half wrong -- a
transfer and a start are call!, but everything a process hands OUT is cast!,
because the protocols say those must not block. Both fixed, and rule 1 now
names ebb.impl.arbiter, which is where the claim protocol actually lives.

Also in CONTRIBUTING.md:
  * the conformance convention now covers doc/divergences.edn and the gate,
    since "write it down" is no longer enough -- an entry needs an anchor and
    either a pinning test or a written reason there cannot be one;
  * the missionary oracle is documented with the commands, because it settled
    several entries that reading Ambiguous.java got wrong;
  * the v- naming convention is demoted from "a jolt defect that has cost four
    bugs" to "a convention, and suspect concurrency first" -- ebb-8nq.24 could
    not reproduce the defect and the symptom is indistinguishable from the
    read-modify-write races that turned up all over the impls.

Three wrong rule numbers, all pointing at the locked-region rule, which is 5:
concurrency_test said 3, conformance.md said 4. README said the ADR has five
rules; it has six.

README's defect count was wrong twice over: it said nineteen, the table has
eighteen rows, and two of those are explicitly labelled "not a defect, a cost".
Sixteen defects and two scheduling costs.

server.clj's header now explains start! -- what it fuses and why one cold
handshake is worth removing -- rather than leaving the reasoning only in a
closed bead. README's documentation list gains doc/divergences.edn.